Revert "Merge branch 'main' into configurable_external_search_features"
This reverts commit 7990b24f7b41c45c2e3b02e7ae63637731f39f16, reversing
changes made to 222812cc7981a42d8160c57e7e2f9d3e5f460275.